# DBus-NormalDistributionGenerator

./: CMakeLists.txt  README.md  generator.cpp  generator.h  interface.cpp  interface.h  interface_main.cpp  main.cpp
release/: Generator_engine  Generator_interface  funcTest
